<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">DriveToWin</string>
    <string name="title_activity_user_registration">User Registration</string>
    <string name="title_activity_user_registration_2">User Registration</string>
    <string name="title_activity_user_registration_3">User Registration</string>
    <string name="title_activity_aaa_user_login">Login</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="title_activity_list_emergency_contacts">Emergency Contacts</string>
    <string name="title_activity_add_emergency_contacts">Add Emergency Contact</string>
    <string name="title_activity_vehicle_diagonistic">Vehicle Diagnostic</string>
    <string name="title_activity_road_assistance">Roadside Assistance</string>
    <string name="title_activity_file_a_claim">Claim Request</string>
    <string name="title_activity_view__profile">View Profile</string>
    <string name="title_activity_change__password">Change Password</string>

    <string name="app_name_formatted">Drive To Win !!!</string>
    <string name="powered_by">Powered by</string>
    <string name="aaa_logo_description">AAA Logo</string>
    <string name="aaa_user_login_btn">AAA User Login</string>
    <string name="get_aaa_membership_btn">Get AAA Membership</string>
    <string name="login_as_guest_btn">Login as Guest</string>
    <string name="login_btn_lbl">Login</string>
    <string name="add_emergency_contact_btn">Add Emergency Contacts</string>
    <string name="login_email_hint">Enter E-mail Address</string>
    <string name="login_pwd_hint">Enter Password</string>
    <string name="first_name_hint">Enter First Name</string>
    <string name="last_name_hint">Enter Last Name</string>
    <string name="confirm_pwd_hint">Confirm Password</string>
    <string name="back_btn_text">Back</string>
    <string name="next_btn_text">Next</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="phone_number_text">Enter Phone Number</string>
    <string name="car_make_text">Enter Car Make</string>
    <string name="car_model_text">Enter Car Model</string>
    <string name="car_year_text">Enter Car Year</string>
    <string name="car_vin_text">Enter VIN #</string>
    <string name="finish_button_text">Register</string>
    <string name="hello_world">Hello world!</string>
    <string name="car_tag">Enter Tag #</string>
    <string name="policy_number">Enter Your Insurance Policy #</string>
    <string name="claim_number">Enter Roadside Assistance Phone #</string>
    <string name="terms_text">By signing up, you accept the terms and conditions of the application</string>

    <string-array name="main_menu_items">
        <item>Drive to win challenge!</item>
        <item>Vehicle Diagnostics</item>
        <item>Predictive time</item>
        <item>My trips</item>
        <item>View Profile</item>
        <item>View Emergency Contacts</item>
        <item>Roadside Assistance</item>
    </string-array>

    <string name="go_back">Go Back</string>
    <string name="plus_sign">+</string>
    <string name="enter_name">Enter Name</string>
    <string name="add_btn">Add</string>
    <string name="safety_first">YOUR SAFETY IS OUR PRIORITY.</string>
    <string name="safe_location_question">Are you in a safe location?</string>
    <string name="safe_btn">YES, I AM SAFE</string>
    <string name="emergency_text">If you are unsafe or in an emergency, immediately call 911 now</string>
    <string name="call_911_btn">CALL 911</string>
    <string name="inform_family_msg">Do you want an alert to your emergency contacts?</string>
    <string name="inform_family_btn">YES SEND AN ALERT</string>
    <string name="insurance_claim_info">INFORMATION ABOUT YOUR INSURANCE POLICY</string>
    <string name="policy_num">Insurance Policy #</string>
    <string name="claim_phone">Roadside Assistance Phone #</string>
    <string name="call_phone_btn">Call Roadside Assistance Now</string>
    <string name="name_view_profile">Name</string>
    <string name="car_make_model_view_profile">Car Make &amp; Model</string>
    <string name="vin_view_profile">VIN #</string>
    <string name="phone_num_view_profile">Phone #</string>
    <string name="email_view_profile">E-mail</string>
    <string name="change_pwd">Change Password</string>
    <string name="deactivate_Account">Deactivate Account</string>
    <string name="old_password">Enter Old Password</string>
    <string name="new_password">Enter New Password</string>
    <string name="conf_new_password">Confirm New Password</string>
    <string name="change_password_btn">Change Password</string>
    <string name="title_activity_trips">Trips</string>
	<string name="mileage">Current Mileage</string>
	<string name="engine_runtime">Engine Run time </string>
	<string name="fuel_level">Gas- </string>


</resources>
