<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ashwinkumar.drivetowin.user_registration_2">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phone_num_text"
        android:hint="@string/phone_number_text"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="53dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_year_text"
        android:hint="@string/car_year_text"
        android:gravity="center"
        android:layout_below="@+id/phone_num_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_alignRight="@+id/phone_num_text"
        android:layout_alignEnd="@+id/phone_num_text" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_make_text"
        android:hint="@string/car_make_text"
        android:gravity="center"
        android:layout_below="@+id/car_year_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp"
        android:layout_alignRight="@+id/car_year_text"
        android:layout_alignEnd="@+id/car_year_text" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_model_text"
        android:hint="@string/car_model_text"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:inputType="text"
        android:layout_below="@+id/car_make_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/car_make_text"
        android:layout_alignEnd="@+id/car_make_text" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_vin_text"
        android:hint="@string/car_vin_text"
        android:gravity="center"
        android:layout_below="@+id/car_model_text"
        android:layout_marginTop="44dp"
        android:layout_alignRight="@+id/car_model_text"
        android:layout_alignEnd="@+id/car_model_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_btn_text"
        android:id="@+id/back_btn"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/car_vin_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_btn_text"
        android:id="@+id/next_btn"
        android:layout_alignBottom="@+id/back_btn"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_btn_text"
        android:id="@+id/cancel_btn"
        android:layout_alignTop="@+id/next_btn"
        android:layout_toRightOf="@+id/next_btn"
        android:layout_toEndOf="@+id/next_btn"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp" />

</RelativeLayout>
