<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Login"
    android:id="@+id/layout_R">

    <TextView android:text="@string/app_name_formatted" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="38sp"
        android:id="@+id/app_name_formatted"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/powered_by"
        android:id="@+id/second_heading"
        android:layout_marginLeft="86dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="33dp"
        android:layout_alignTop="@+id/aaa_logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/aaa_logo"
        android:src="@drawable/aaa_logo"
        android:contentDescription="@string/aaa_logo_description"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_below="@+id/app_name_formatted"
        android:layout_toRightOf="@+id/second_heading"
        android:layout_toEndOf="@+id/second_heading" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aaa_user_login_btn"
        android:id="@+id/login_btn"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/get_aaa_membership_btn"
        android:layout_alignEnd="@+id/get_aaa_membership_btn"
        android:layout_alignLeft="@+id/get_aaa_membership_btn"
        android:layout_alignStart="@+id/get_aaa_membership_btn"
        android:onClick="userLogin"/>

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/get_aaa_membership_btn"
    android:id="@+id/get_aaa_membership_btn"
    android:layout_below="@+id/login_btn"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="36dp"
    android:onClick="get_aaa_membership"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_as_guest_btn"
        android:id="@+id/login_as_guest_btn"
        android:layout_below="@+id/get_aaa_membership_btn"
        android:layout_marginTop="36dp"
        android:layout_alignRight="@+id/get_aaa_membership_btn"
        android:layout_alignEnd="@+id/get_aaa_membership_btn"
        android:layout_alignLeft="@+id/get_aaa_membership_btn"
        android:layout_alignStart="@+id/get_aaa_membership_btn"
        android:onClick="sign_in_in_as_guest"/>

</RelativeLayout>
