<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ashwinkumar.drivetowin.user_registration">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/first_name_hint"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/first_name_txt"
        android:layout_marginTop="46dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/last_name_hint"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/last_name_txt"
        android:layout_below="@+id/first_name_txt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_alignRight="@+id/first_name_txt"
        android:layout_alignEnd="@+id/first_name_txt" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/login_email_hint"
        android:gravity="center"
        android:id="@+id/email_txt"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/last_name_txt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/last_name_txt"
        android:layout_alignEnd="@+id/last_name_txt" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pwd_text"
        android:hint="@string/login_pwd_hint"
        android:gravity="center"
        android:layout_below="@+id/email_txt"
        android:layout_marginTop="40dp"
        android:layout_alignRight="@+id/email_txt"
        android:layout_alignEnd="@+id/email_txt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/conf_pwd_text"
        android:hint="@string/confirm_pwd_hint"
        android:gravity="center"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/pwd_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/pwd_text"
        android:layout_alignEnd="@+id/pwd_text" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_btn_text"
        android:id="@+id/next_btn"
        android:layout_marginLeft="90dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/conf_pwd_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="NextButtonPressed_Registration_1"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_btn_text"
        android:id="@+id/cancel_btn"
        android:layout_alignTop="@+id/next_btn"
        android:layout_toRightOf="@+id/next_btn"
        android:layout_toEndOf="@+id/next_btn"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:onClick="CancelButtonPressed"/>
</RelativeLayout>
