<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ashwinkumar.drivetowin.add_emergency_contacts">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_emergency_contact_name"
        android:hint="@string/enter_name"
        android:ems="10"
        android:layout_marginTop="96dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_emergency_contact_email"
        android:hint="@string/login_email_hint"
        android:ems="10"
        android:gravity="center"
        android:layout_above="@+id/add_emergency_contact_phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="32dp"
        android:layout_alignRight="@+id/add_emergency_contact_name"
        android:layout_alignEnd="@+id/add_emergency_contact_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_emergency_contact_phone"
        android:hint="@string/phone_number_text"
        android:inputType="phone"
        android:ems="10"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_btn"
        android:id="@+id/add_btn"
        android:layout_marginTop="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginStart="57dp"
        android:layout_below="@+id/add_emergency_contact_phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="EmergencyContactAddBtnPressed"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_btn_text"
        android:id="@+id/cancel_btn"
        android:layout_alignTop="@+id/add_btn"
        android:layout_toRightOf="@+id/add_btn"
        android:layout_toEndOf="@+id/add_btn"
        android:layout_marginLeft="55dp"
        android:layout_marginStart="55dp"
        android:onClick="EmergencyContactCancelBtnPressed"/>
</RelativeLayout>
