<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				android:paddingBottom="@dimen/activity_vertical_margin"
				tools:context="com.example.ashwinkumar.drivetowin.VehicleDiagonistic">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:id="@+id/mileage"
		android:labelFor="@string/mileage"
		android:layout_below="@+id/mileage"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="72dp"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:id="@+id/engine_runtime"
		android:labelFor="@string/engine_runtime"
		android:layout_below="@+id/mileage"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="66dp"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:id="@+id/fuel_level"
		android:labelFor="@string/fuel_level"
		android:layout_below="@+id/mileage"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="66dp"/>

</RelativeLayout>
