<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ashwinkumar.drivetowin.file_a_claim">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insurance_claim_info"
        android:id="@+id/insurance_claim_info"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="53dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/policy_num"
        android:id="@+id/policy_num"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center"
        android:layout_below="@+id/insurance_claim_info"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:id="@+id/policy_num_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center"
        android:layout_below="@+id/policy_num"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/claim_phone"
        android:id="@+id/claim_phone"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center"
        android:layout_below="@+id/policy_num_lbl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:id="@+id/claim_phone_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center"
        android:layout_below="@+id/claim_phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_phone_btn"
        android:id="@+id/call_phone_btn"
        android:gravity="center"
        android:layout_below="@+id/claim_phone_lbl"
        android:layout_marginTop="51dp"
        android:layout_alignRight="@+id/claim_phone_lbl"
        android:layout_alignEnd="@+id/claim_phone_lbl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="CallRoadSideAssistancePressed"/>
</RelativeLayout>
